# sdr-web

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  pipeline.rs  proxy.rs  state.rs
backend/src/dsp/: deemphasis.rs  fft.rs  fm_demod.rs  mod.rs
backend/src/rtl_tcp/: client.rs  commands.rs  mod.rs
backend/src/websocket/: mod.rs  protocol.rs  server.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FrequencyControl.tsx  GainControl.tsx  SpectrumDisplay.tsx  StatusBar.tsx  WaterfallDisplay.tsx
frontend/src/hooks/: useAudioPlayback.ts  useSDRConnection.ts  useSpectrumData.ts  useWasmDsp.ts
frontend/src/lib/: constants.ts  protocol.ts
frontend/src/workers/: dsp-worker.ts
wasm-dsp/: Cargo.toml
wasm-dsp/src/: convert.rs  deemphasis.rs  fft.rs  filter.rs  lib.rs
